<resources>
    <string name="app_name">MX Danmaku</string>

    <string name="pref_header_accessibility">Accessibility service mode</string>
    <string name="pref_header_accessibility_summary">For most users</string>
    <string name="pref_accessibility_storage_permission">Grant storage permission</string>
    <string name="pref_accessibility_storage_permission_summary">Storage permission is needed to read video file from your phone, ignore this if you don\'t store video on your phone</string>
    <string name="pref_accessibility_overlay_permission">Grant overlay permission</string>
    <string name="pref_accessibility_overlay_permission_summary">Overlay permission is needed to display danmaku, danmaku window is on the top of player window, and follow player window\'s state to show/hide</string>
    <string name="pref_accessibility_service_permission">Accessibility service permission</string>
    <string name="pref_accessibility_service_permission_summary">Accessibility service is needed to get MX Player\'s state, video duration, pause button click, etc</string>
    <string name="pref_accessibility_intent_redirector">Enable intent redirector</string>
    <string name="pref_accessibility_intent_redirector_summary">Enable this and choose \"MX Danmaku\" when open video file from file explorer, we need to know file name and calculate file hash to match danmaku (service provided by DanDanPlay), you\'ll be redirect to MX Player instatly</string>

    <string name="pref_header_ltsystem">LTweaksSystem mode</string>
    <string name="pref_header_ltsystem_summary">For advanced users</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
