<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="li.lingfeng.mxdanmaku.ui.fragment.AccessibilityFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_accessibility"
        android:summary="@string/pref_header_accessibility_summary" />

    <header
        android:fragment="li.lingfeng.mxdanmaku.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="li.lingfeng.mxdanmaku.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
